apps/base/code-server/code-server-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: code-server-ingressroute
  namespace: code-server
  annotations:
    gethomepage.dev/href: "https://vscode.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Code Server"
    gethomepage.dev/description: "VS Code in a browser"
    gethomepage.dev/app: code-server
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/visualstudiocode.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`vscode.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: code-server
          port: 8443
          scheme: http
  tls: {}
